# mpoints

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/: actions.yml  actions_solved.yml
.github/workflows/: python-package-conda.yml  test_pip_installation.yml
doc/: conf.py  extension.rst  index.rst  install.rst  references.rst  support.rst  tutorial.ipynb
doc/apidoc/: mpoints.rst
mpoints/: __init__.py  hybrid_hawkes_exp.py  hybrid_hawkes_exp_cython.c  hybrid_hawkes_exp_cython.pyx  plot_tools.py  setup.py
tests/: hybrid_hawkes_exp_test.py  piptest.yml
