# pyproject.toml
[build-system]
requires = [ "setuptools", "numpy", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "mpoints"
version = "0.1.0"
description = "Calibration and simulation of state-dependent Hawkes processes."
authors = [
{name="Maxime Morariu-Patrichi", email="maximemorariu@me.com"},
{name="Claudio Bellani", email="claudio.bellani01@gmail.com"}]
dependencies = [
	"numpy<1.22",
        "scipy",
        "ipykernel",
        "matplotlib",
]

[tool.setuptools.packages]
find = {}
